--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                             </div>
                         </div>
                         <div>
-                            <button>
-                                <p class="text-blue-700 font-semibold mr-2">Follow</p>
+                            <button >
+                                <p id="test" class="text-blue-700 font-semibold mr-2">Follow</p>
                             </button>
                         </div>
                     </div>
@@ -151,5 +151,5 @@
     </div>
 </body>
     <script src="script.js" type="module"></script>
-    <script src="helper-functions.js"></script>
+    <script src="helper-functions.js" type="module"></script>
 </html>
