--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
                 <div class="py-5 z-10 mt-6 -ml-10 -mr-4">
                     <button>
-                        <img src="arroww.webp" class="min-w-6 max-w-6 bg-white rounded-full -rotate-90 absolute" hidden/>
+                        <img src="arroww.webp" class="min-w-6 max-w-6 bg-white rounded-full -rotate-90 absolute" hidde/>
                     </button>
                 </div>
                 <!-- story section ends -->
@@ -115,11 +115,11 @@
                     <div class="justify-between flex">
                         <div class="flex">
                             <img src="profile-pic.webp" class="min-w-7 max-w-7 rounded-full mt-1" />
-                            <button class="text-[0.8rem] font-bold mt-1 ml-3 hover:underline">
+                            <button class="text-[0.9rem] font-bold mt-1 ml-3 hover:underline">
                                 <p id="username" >vkohli_09</p>
                             </button>
                             <img src="verified.webp" class="min-w-3 max-w-3 min-h-3 max-h-3 rounded-full mt-[0.85rem] ml-1" />
-                            <p id="time-since-posted" class="text-[0.8rem] font-bold text-gray-500 mt-[0.6rem] ml-3">~ 12h</p>
+                            <p id="time-since-posted" class="text-[0.9rem] font-bold text-gray-500 mt-[0.6rem] ml-3">~ 12h</p>
                         </div>
                         <button class="hover:bg-gray-900 rounded-full p-2 pb-2">
                             <p class="text-2xl -mt-3">...</p>
@@ -190,13 +190,12 @@
                                 <p class="text-gray-400" id="mutual-followers">10 mutual followers</p>
                             </div>
                         </div>
-                        <div>
-                            <button >
-                                <p class="text-blue-700 font-semibold px-3 py-1 hover:bg-sky-950 rounded-full">Follow</p>
-                            </button>
-                        </div>
+                    <div>
+                        <button >
+                            <p class="text-blue-700 font-semibold px-3 py-1 hover:bg-sky-950 rounded-full">Follow</p>
+                        </button>
                     </div>
-                
+                </div>
             </div>
         </div>
     </div>
