--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="flex">
         <!-- Left Section starts -->
         <div style="border-right-width: 0.03em;" class="hidden sm:block border-l-[0.03em] min-w-72 min-h-screen border-stone-600">
-            <div class="ml-4"><img src="new-logo.webp" alt="Loading..." class="max-h-12  mt-10" /></div>
+            <div class="ml-4"><img src="public/images/new-logo.webp" alt="Loading..." class="max-h-12  mt-10" /></div>
             <!-- Navbar starts -->
             <div class="px-1 mt-10">
                 <ul>
@@ -76,7 +76,7 @@
                     </li><li>
                         <button class="hover:bg-zinc-800 rounded-lg min-w-full min-h-12 px-4">
                             <div class="flex space-x-4">
-                                <img src="profile-pic.webp" class="max-w-7 rounded-full" />
+                                <img src="public/images/profile-pic.webp" class="max-w-7 rounded-full" />
                                 <a>Profile</a>
                             </div>
                         </button>
@@ -98,7 +98,7 @@
                 <div id="story-list" class="flex space-x-5 justify-start mt-5 overflow-auto py-5" >
                     <div id="story-demo" key="demo-key">
                         <button class="min-w-16 min-h-16 max-w-16 max-h-16 rounded-full justify-center flex bg-red-500" style="background: linear-gradient(125deg, #b000ef, #f27d00);">
-                            <img src="profile-pic.webp" class="max-w-16 rounded-full" style="margin-top: 4px; max-width: 3.6rem;"/>
+                            <img src="public/images/profile-pic.webp" class="max-w-16 rounded-full" style="margin-top: 4px; max-width: 3.6rem;"/>
                         </button>
                         <p class="text-xs mt-2" id="username">vatsal_1133</p>
                     </div>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="py-5 mt-6 -ml-10 -mr-5" id="scroll-story-right-button-div">
                     <button id="scroll-story-right-button">
-                        <img src="arroww.webp" class="min-w-6 max-w-6 bg-white rounded-full -rotate-90 absolute"/>
+                        <img src="public/images/arroww.webp" class="min-w-6 max-w-6 bg-white rounded-full -rotate-90 absolute"/>
                     </button>
                 </div>
                 <!-- story section ends -->
@@ -127,11 +127,11 @@
                 <div id="post-demo">
                     <div class="justify-between flex">
                         <div class="flex">
-                            <img src="profile-pic.webp" class="min-w-7 max-w-7 rounded-full mt-1" />
+                            <img src="public/images/profile-pic.webp" class="min-w-7 max-w-7 rounded-full mt-1" />
                             <button class="text-[0.9rem] font-bold mt-1 ml-3 hover:underline">
                                 <p id="username" >vkohli_09</p>
                             </button>
-                            <img src="verified.webp" class="min-w-3 max-w-3 min-h-3 max-h-3 rounded-full mt-[0.85rem] ml-1" />
+                            <img src="public/images/verified.webp" class="min-w-3 max-w-3 min-h-3 max-h-3 rounded-full mt-[0.85rem] ml-1" />
                             <p id="time-since-posted" class="text-[0.9rem] font-bold text-gray-500 mt-[0.6rem] ml-3">~ 12h</p>
                         </div>
                         <div>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="mt-5">
                         <div>
-                            <img src="post.webp" class="min-w-full rounded-md" />
+                            <img src="public/images/post.webp" class="min-w-full rounded-md" />
                         </div>
                         <div>
                             <div class="flex mt-5 space-x-2 justify-start">
@@ -177,7 +177,7 @@
             <!-- Account info and switch -->
             <div class="flex justify-between items-center mt-8 px-4">
                 <div class="flex items-center">
-                    <img src="profile-pic.webp" class="max-w-16 rounded-full" style="margin-top: 4px; max-width: 3.6rem;"/>
+                    <img src="public/images/profile-pic.webp" class="max-w-16 rounded-full" style="margin-top: 4px; max-width: 3.6rem;"/>
                     <div class="text-sm items-center ml-4">
                         <p class="font-bold" id="username">vatsal_1133</p>
                         <p class="text-gray-400" id="name">Vatsal Sutariya</p>
@@ -200,7 +200,7 @@
                 <div id="suggestion-list" class="mt-4">
                     <div id="suggestion-demo" class="flex justify-between items-center mt-2 px-4" data-key='2'>
                         <div class="flex items-center">
-                            <img src="profile-pic.webp" class="max-w-16 rounded-full" style="margin-top: 4px; max-width: 3.6rem;"/>
+                            <img src="public/images/profile-pic.webp" class="max-w-16 rounded-full" style="margin-top: 4px; max-width: 3.6rem;"/>
                             <div class="text-sm items-center ml-4">
                                 <p class="font-bold" id="username">sam_1999</p>
                                 <p class="text-gray-400 text-xs" id="mutual-followers">10 mutual followers</p>
@@ -216,6 +216,6 @@
         </div>
     </div>
 </body>
-    <script src="script.js" type="module"></script>
-    <script src="helper-functions.js" type="module"></script>
+    <script src="public/js/script.js" type="module"></script>
+    <script src="public/js/helper-functions.js" type="module"></script>
 </html>
